fix csv